Avoid deprecated methods in clover-runtime.
* Factory method for Integer
* Use utility method to get system property as boolean
* Avoid Class.newInstance